# telegram

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  runbot.py
bot/: config.py  handlers.py  loader.py  services.py
voices/: this_is_media_folder.txt
